# cw-mcs-academy-course

./: Cargo.toml  DESING.md  README.md
common/: Cargo.toml
common/src/: msg.rs  state.rs
contracts/distribution/: Cargo.toml
contracts/distribution/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/distribution/src/contract/: exec.rs  query.rs
contracts/membership/: Cargo.toml
contracts/membership/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/membership/src/contract/: exec.rs  query.rs  reply.rs
contracts/membership/src/multitest/: tests.rs
contracts/proxy/: Cargo.toml
contracts/proxy/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/proxy/src/contract/: exec.rs  query.rs  reply.rs
