[package]
name = "membership"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["library", "cw-multi-test", "anyhow"]

[dependencies]
cosmwasm-std = "1.1.9"
serde = "1.0.152"
cw-storage-plus = "1.0.1"
schemars = "0.8.11"
cosmwasm-schema = "1.1.9"
thiserror = "1.0.38"
proxy = { version = "0.1.0", path = "../proxy", features = ["library"] }
anyhow = { version = "1.0.70", optional = true }
cw-multi-test = { version = "0.16.2", optional = true }
cw-utils = "1.0.1"
common = { version = "0.1.0", path = "../../common" }
distribution = { version = "0.1.0", path = "../distribution", features = ["library"] }

[dev-dependencies]
anyhow = "1.0.70"
cw-multi-test = "0.16.2"
proxy = { path = "../proxy", features = ["mt"] }
distribution = { version = "0.1.0", path = "../distribution", features = ["mt"] }
